General documentation fixes
